# tron_service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  tron.db
app/: main.py
app/api/: endpoints.py
app/db/: database.py
app/models/: model.py
app/repositories/: repository.py
app/schemas/: pydantic_schemas.py
app/services/: api_service.py  tron_service.py
tests/: conftest.py  test_integration.py  test_unit.py
